@@ -1,31 +1,23 @@
 package com.medilabo.apigateway.service;
 
+import com.medilabo.apigateway.config.InMemoryUserStore;
 import com.medilabo.apigateway.jwt_demo.User;
-import com.medilabo.apigateway.userrepo.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
-import java.util.Collections;
 
 @Service
 public class CustomerUserDetailsService implements UserDetailsService {
     @Autowired
-    private UserRepository userRepository;
+    private InMemoryUserStore userStore;
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username);
-        if (user == null) {
-            throw new UsernameNotFoundException("User Not Found with username: " + username);
-        }
-        return new org.springframework.security.core.userdetails.User(
-                user.getUsername(),
-                user.getPassword(),
-                Collections.singletonList(
-                        new SimpleGrantedAuthority("ROLE_" + user.getRole().toUpperCase())
-                )
-        );
+        User user = userStore.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
+
+        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(), java.util.List.of(new SimpleGrantedAuthority(user.getRole())));
     }
+
 }
 
